<resources>
    <string name="app_name">Team 17 Project 2</string>
    <string name="buttonQuit_Label">Quit</string>
    <string name="buttonReturn_Label">Title</string>
    <string name="start">START</string>
    <string name="name1">Player 1:</string>
    <string name="name2">Player 2:</string>
    <string name="steam">Steam Logo</string>
    <string name="buttonInsert_Label">Insert</string>
    <string name="buttonDiscard_Label">Discard</string>
    <string name="buttonOpenValve_Label">Open Valve</string>
    <string name="buttonSurrender_Label">Surrender</string>
    <string name="p1_win">You Win!</string>
    <string name="p2_win">Player 2 Wins!</string>
    <string name="winless">No Winner!</string>
    <string name="lose">You Lose!</string>
    <string name="congrats_string">Congrats %1$s!</string>
    <string name="notext"></string>
    <string name="rotate90_Label">Rotate 90</string>
    <string name="rotateN90_Label">Rotate -90</string>
    <string name="currentPlayer_Msg">Current Player: </string>
    <string name="InvalidInsert_Msg">Cannot insert pipe here</string>
    <string name="success_alert">Success!</string>
    <string name="fail_alert">Failure :(</string>
    <string name="success_Msg">The pipes have been properly pressurized</string>
    <string name="fail_Msg">Oh No! We\'ve sprung a leak </string>
    <string name="create_user_label">Create User</string>
    <string name="create_user">Fill out form below to create a new user!</string>
    <string name="id_entry">Enter ID:</string>
    <string name="password_entry">Enter a password:</string>
    <string name="password_reentry">Re-enter password:</string>
    <string name="new_user">Create New User</string>
    <string name="login">Login</string>
    <string name="wait">WAITING FOR PLAYER 2 TO LOG IN!</string>
    <string name="cant_create_new_user">Unable to create new user, try again!</string>
    <string name="cant_login">Unable to login, check credentials and connection to internet</string>
    <string name="server_join_game_fail">Can\'t connect with server, join game aborted. Please make sure you have access to the internet.</string>
    <string name="server_lobby_full">Game full please try again later</string>
    <string name="opening_remember_checkBox">Remember login credentials</string>
    <string name="waiting">WAITING FOR OTHER PLAYER TO COMPLETE TURN.</string>
    <string name="warning">Remaining inactive for three turn in a row will force a forfeit</string>
    <string name="timeout_detected">A timeout was detected</string>
    <string name="timeout_Msg">A timeout was detected, game has been terminated.</string>
</resources>
